# wkline

./: .gitignore  Makefile.am  config.def.json  configure.ac  wkline.conf  wkline.json
src/: load_config.c  load_config.h  wkline.c  wkline.h
src/widgets/: desktops.c  external_ip.c  widgets.c  widgets.h
util/: settings.c  settings.h
